<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="732dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/titleId2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="440dp"
        android:fontFamily="sans-serif-light"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/text_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="First Name" />

    <TextView
        android:id="@+id/firstNametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:text="FIRST NAME *"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Last Name" />

    <TextView
        android:id="@+id/lastNametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="226dp"
        android:layout_marginBottom="10dp"
        android:text="LAST NAME *"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Email" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:text="EMAIL *"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Password" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:text="PASSWORD *"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="date"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Date of Birth" />

    <TextView
        android:id="@+id/dobTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:text="DATE OF BIRTH *"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dob"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="355dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="Register"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:backgroundTint="#836B47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        app:layout_constraintVertical_bias="0.805"
        tools:text="msg" />


</androidx.constraintlayout.widget.ConstraintLayout>