...
        android:layout_marginBottom="31dp"
        android:fontFamily="sans-serif-light"
        android:text="It is a good day to get coffee, get started."
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleId" />

    <Button
        android:id="@+id/registerButton"
...
